--- a/test.html
+++ b/test.html
@@ -241,6 +241,30 @@
       // console.log(`${mul(test1, test2)}`);
       console.log(`${test1}/${test2}=${test1 / test2}`);
       console.log(`${divi(test1, test2, 2)}`);
+
+      // window.addEventListener("hashchange", (event) => {
+      //   console.log(`hashchange=${window.location.hash}`);
+      // });
+      // window.location.hash = `#/test`;
+      // setTimeout(() => {
+      //   window.location.hash = `#/test1`;
+      // }, 2000);
+
+      window.onpopstate = function (event) {
+        alert(
+          "location: " +
+            document.location +
+            ", state: " +
+            JSON.stringify(event.state)
+        );
+      };
+
+      history.pushState({ page: 1 }, "title 1", "?page=1");
+      history.pushState({ page: 2 }, "title 2", "?page=2");
+      history.replaceState({ page: 3 }, "title 3", "?page=3");
+      history.back(); // 弹出 "location: http://example.com/example.html?page=1, state: {"page":1}"
+      history.back(); // 弹出 "location: http://example.com/example.html, state: null
+      history.go(2); // 弹出 "location: http://example.com/example.html?page=3, state: {"page":3}
     </script>
   </body>
 </html>
