--- a/test.html
+++ b/test.html
@@ -265,6 +265,16 @@
       history.back(); // 弹出 "location: http://example.com/example.html?page=1, state: {"page":1}"
       history.back(); // 弹出 "location: http://example.com/example.html, state: null
       history.go(2); // 弹出 "location: http://example.com/example.html?page=3, state: {"page":3}
+
+      let testArray = [1,2,3];
+      for (let i = 0, j = testArray.length - 1; i <= j; i++, j--) {
+        if (i == j) {
+          console.log(`testArray[ij]=${testArray[i]}`);
+        } else {
+          console.log(`testArray[i]=${testArray[i]}`);
+          console.log(`testArray[j]=${testArray[j]}`);
+        }
+      }
     </script>
   </body>
 </html>
