--- a/test.html
+++ b/test.html
@@ -251,12 +251,12 @@
       // }, 2000);
 
       window.onpopstate = function (event) {
-        alert(
-          "location: " +
-            document.location +
-            ", state: " +
-            JSON.stringify(event.state)
-        );
+        // alert(
+        //   "location: " +
+        //     document.location +
+        //     ", state: " +
+        //     JSON.stringify(event.state)
+        // );
       };
 
       history.pushState({ page: 1 }, "title 1", "?page=1");
@@ -266,7 +266,7 @@
       history.back(); // 弹出 "location: http://example.com/example.html, state: null
       history.go(2); // 弹出 "location: http://example.com/example.html?page=3, state: {"page":3}
 
-      let testArray = [1,2,3];
+      let testArray = [1, 2, 3];
       for (let i = 0, j = testArray.length - 1; i <= j; i++, j--) {
         if (i == j) {
           console.log(`testArray[ij]=${testArray[i]}`);
@@ -275,6 +275,18 @@
           console.log(`testArray[j]=${testArray[j]}`);
         }
       }
+    </script>
+    <script>
+      const ctx = {
+        window: null,
+      };
+      function runCode(code, ctx) {
+        with (ctx) {
+          eval(code);
+        }
+      }
+      const code = `console.log(window)`;
+      runCode(code, ctx);
     </script>
   </body>
 </html>
